profile-packages-metadata/CustomObject/objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cars</relationshipLabel>
        <relationshipName>Cars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Сategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Сargo</fullName>
                </value>
                <value>
                    <fullName>Passenger car</fullName>
                </value>
                <value>
                    <fullName>Sport car</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>